Correctly handle overflow on Team Members, mobile-bugged components

--- a/src/components/TeamList.module.scss
+++ b/src/components/TeamList.module.scss
@@ -163,106 +163,137 @@
       width: 100%;
       max-height: 100%;
       display: flex;
+      position: relative;
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: $border;
+        left: $border;
+        width: calc(100% - 2 * $border);
+        height: 20px;
+        z-index: 200;
+        pointer-events: none;
+        user-select: none;
+        background: linear-gradient(
+          to bottom,
+          transparentize($background, 1),
+          $background
+        );
+      }
 
       .overlayCard {
         border: solid $border $accent;
         background-color: $background;
         padding: 25px;
-        width: 100%;
-        max-height: 100%;
-        overflow-y: auto;
-        display: flex;
-        flex-direction: row;
-        align-items: start;
-        gap: 25px;
-        z-index: 100;
-
-        &::-webkit-scrollbar {
-          display: none;
-        }
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-
-        .imageWrapper {
-          flex-shrink: 0;
-          width: 200px;
-        }
-
-        .textColumn {
-          display: flex;
-          flex-direction: column;
-          flex-grow: 1;
-          gap: 15px;
-        }
-
-        .titleContainer {
-          display: flex;
-          flex-direction: column;
-          align-items: flex-start;
-          gap: 8px;
-          width: min-content;
-          min-width: 150px;
-          .name {
-            font-size: 1.5em;
-          }
-
-          .tags {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-            gap: 8px;
-          }
-        }
-
-        .overlayDetails {
-          display: flex;
-          flex-direction: column;
-          gap: 1em;
-          font-size: 18px;
-          line-height: 1.25;
-
-          .role {
-            color: $accent;
-          }
-
-          .bio {
-            color: $foreground;
-          }
-
-          @media (max-width: 750px), (max-height: 350px) {
-            font-size: 15px;
-          }
-        }
-
         @media (max-width: 750px) {
-          flex-direction: column;
-          align-items: center;
           padding: 20px;
-          gap: 20px;
+        }
+        width: 100%;
+        height: auto;
+        max-height: min(100%, 70vh);
+        overflow-y: auto;
+        display: block;
+        z-index: 100;
+        .overlayCardContents {
+          display: flex;
+          flex-flow: row wrap;
+          justify-content: center;
+          align-items: start;
+          gap: 25px;
+          width: 100%;
+          height: auto;
+          > * {
+            flex-grow: 1;
+          }
+
+          &::-webkit-scrollbar {
+            display: none;
+          }
+          -ms-overflow-style: none;
+          scrollbar-width: none;
 
           .imageWrapper {
-            width: auto;
-            max-width: 250px;
-            margin-bottom: 0;
+            flex-shrink: 0;
+            width: 200px;
           }
 
           .textColumn {
-            width: 100%;
-            align-items: center;
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
             gap: 15px;
           }
 
           .titleContainer {
-            align-items: center;
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 8px;
+            width: min-content;
+            min-width: 150px;
+            .name {
+              font-size: 1.5em;
+            }
+
             .tags {
-              justify-content: center;
+              display: flex;
+              flex-wrap: wrap;
+              justify-content: flex-start;
+              gap: 8px;
             }
           }
 
           .overlayDetails {
-            text-align: center;
+            display: flex;
+            flex-direction: column;
+            gap: 1em;
+            font-size: 18px;
+            line-height: 1.25;
+
+            .role {
+              color: $accent;
+            }
+
+            .bio {
+              color: $foreground;
+            }
+
+            @media (max-width: 750px), (max-height: 350px) {
+              font-size: 15px;
+            }
+          }
+          @media (max-width: 750px) {
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            > * {
+              width: 100% !important;
+            }
+
+            .imageWrapper {
+              width: auto;
+              max-width: 250px;
+              margin-bottom: 0;
+            }
+
+            .textColumn {
+              width: 100%;
+              align-items: center;
+              text-align: center;
+              gap: 15px;
+            }
+
+            .titleContainer {
+              align-items: center;
+              text-align: center;
+              .tags {
+                justify-content: center;
+              }
+            }
+
+            .overlayDetails {
+              text-align: center;
+            }
           }
         }
       }
